Footer menu spacing fix

--- a/wp-content/themes/astro/src/sass/3-objects/_footer.scss
+++ b/wp-content/themes/astro/src/sass/3-objects/_footer.scss
@@ -63,7 +63,7 @@
     padding-top: 50px;
 
     &>.c-navigation__item{
-      @include fluid-size('margin-right', 5px, 50px);
+      @include fluid-size('margin-right', 5px, 50px, $break-desktop, $font-lock-max);
     }
   }
 
